--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style/main.css" />
-    <title>Pays du monde</title>
+    <title>Keep food</title>
   </head>
   <body>
     <header class="header">
